Bug 1136177 - Amount by mouse wheel scrolling is wrong. r=jimm